updated html to fit new 3.1 standards

--- a/example/fluid.html
+++ b/example/fluid.html
@@ -17,6 +17,7 @@
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 <!-- Centurion Framework -->
 <link rel="stylesheet" href="../css/centurion.css" />
+<link rel="stylesheet" href="css/elusive-webfont.css" />
 <!-- End of Framework -->
 <link rel="stylesheet" href="../css/custom.css" />
 
@@ -26,8 +27,8 @@
        filter: none;
     }
   </style>
-<![endif]--><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script type="text/javascript" src="../js/jquery.url.js"></script>
+<![endif]-->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 <script type="text/javascript" src="../js/centurion.js"></script>
 <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -40,7 +41,7 @@
 <header>
 
 	<div class="container">
-		<div class="grid-12">
+		<div class="grid-100">
 				<h1>Centurion Framework</h1>
 				<nav id="main" class="mobile">
 				<span class="openMenu hide-desktop">Open</span>
@@ -60,7 +61,7 @@
   <!-- Content Section -->
   <section>
     <div class="container">
-        <div class="grid-8">
+        <div class="grid-60">
         <h1>The Fluid Framework</h1>
         <h2>Do I stretch to new constraints?</h2>
         <img src="http://placehold.it/200x320/" alt="" class="lfloat frame visible">
@@ -68,7 +69,7 @@
         <p>Centurion offers the basic 960 grid with a twist. Using a 12 column container, the framework can size down from 960 to 768, 480, and 320 pixel screen sizes. Centurion does all its work in the browser, and allows for one template to auto-resize to the device without the need to detect devices through either JavaScript or PHP.</p>
       </div>
       <!-- end of grid 8x3 -->
-      <div class="grid-4">
+      <div class="grid-40">
         <h2>Features</h2>
         <ul>
           <li>Responsive grid system
@@ -89,30 +90,30 @@
       <div class="clear"></div>
 
 
-      <div class="grid-6">
+      <div class="grid-50">
         <h2>Out of the Box</h2>
         <p>Ideally, Centurion wasn't meant to be the end of a theme, but rather it was meant to be beginning of a better one. Most of the features that exist within Centurion I have personally had to rebuild on most of the themes that I have worked on each time a new theme was created. I started working on Centurion to be the bridge between having to build mobile features into a theme, or even to have to build basic features, such as buttons, and text formats. Out of the box, Centurion is meant to speed up the development process.</p>
       </div>
-      <div class="grid-6">
+      <div class="grid-50">
         <h3>What now?</h3>
         <p>Mauris placerat, metus sit amet placerat iaculis, arcu eros commodo risus, non consequat diam nunc sed magna. Proin sed tellus nisl, in condimentum nibh. Pellentesque in justo sit amet dui accumsan fringilla. Vestibulum at consequat diam. Nunc lacus lorem, fringilla quis tempus in, accumsan venenatis lectus. Sed ac neque eget sapien vulputate ornare nec in eros. Vivamus et dignissim eros.</p>
       </div>
 
 
       <div class="clear"></div>
-      <div class="grid-3">
+      <div class="grid-25">
         <h3>Grid 3</h3>
         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
       </div>
-      <div class="grid-3">
+      <div class="grid-25">
         <h3>Grid 3</h3>
         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
       </div>
-      <div class="grid-3">
+      <div class="grid-25">
         <h3>Grid 3</h3>
         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
       </div>
-      <div class="grid-3">
+      <div class="grid-25">
         <h3>Grid 3</h3>
         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
       </div>
@@ -125,19 +126,20 @@
   </section>
   <!-- End of Content Section -->
 
+
   <!-- Footer -->
   <footer>
     <div class="container">
-      <div class="grid-4">
+      <div class="grid-80">
         <p>Centurion Framework was created by <a href="http://www.justinhough.com" title="Justin Hough">Justin Hough</a>. Images supplied by <a href="http://placehold.it/">placehold.it</a></p>
       </div>
-      <div class="grid-4 push-4">
+      <div class="grid-20">
       	<p>Licensed under <a href="http://www.gnu.org/licenses/gpl.html" rel="license">GPL</a> and <a href="http://www.opensource.org/licenses/mit-license.php" rel="license">MIT</a>.</p>
       </div>
     </div>
   </footer>
   <!-- End of Footer -->
 
-
+  <script src="http://localhost:35729/livereload.js"></script>
 </body>
 </html>
