--- a/index.html
+++ b/index.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<title>Centurion Framework</title>
-<meta name="description" content="testing">
-<meta name="author" content="">
-
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-
-<link rel="shortcut icon" href="images/favicon.jpg" />
-<link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
-<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
-<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
-
-<link rel="stylesheet" href="css/reset.css" />
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-<!-- Centurion Framework -->
-<link rel="stylesheet" href="css/centurion.css" />
-<!-- End of Framework -->
-<link rel="stylesheet" href="css/custom.css" />
-
-<!--[if gte IE 9]>
-  <style type="text/css">
-    .gradient {
-       filter: none;
-    }
-  </style>
-<![endif]--><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script type="text/javascript" src="js/jquery.url.js"></script>
-<script type="text/javascript" src="js/centurion.js"></script>
-<!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
+  <meta charset="utf-8">
+  <title>Centurion Framework</title>
+  <meta name="description" content="testing">
+  <meta name="author" content="">
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  
+  <link rel="shortcut icon" href="images/favicon.jpg" />
+  <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
+  
+  <link rel="stylesheet" href="css/reset.css" />
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+  <!-- Centurion Framework -->
+  <link rel="stylesheet" href="css/centurion.css" />
+  <!-- End of Framework -->
+  <link rel="stylesheet" href="css/elusive-webfont.css" />
+  <link rel="stylesheet" href="css/custom.css" />
+  
+  <!--[if gte IE 9]>
+    <style type="text/css">
+      .gradient {
+         filter: none;
+      }
+    </style>
+  <![endif]-->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+  <script type="text/javascript" src="js/centurion.js"></script>
+  <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
 
 </head>
 <body>
@@ -59,7 +60,7 @@
   <!-- Content Section -->
   <section>
     <div class="container">
-        <div class="grid-12">
+        <div class="grid-100">
   <div id="mainBanner">
     <h1>The Framework</h1>
     <p>Centurion is a intuitive responsive framework that works out of the box with added features to hep build your next web project quickly.</p>
@@ -67,7 +68,7 @@
 </div>
 
 
-<div class="grid-8">
+<div class="grid-60">
 
   <img src="http://placehold.it/200x310" alt="" class="lfloat frame visible">
   <p>Centurion is a resposive, media query driven HTML5 and CSS3 framework. It is designed to be used on any website out of the box. Unlilke some other frameworks, Centurion is designed for mobile devices and desktop. Using CSS media queries the Centurion is able to conform to the screen and shift the content as necessary so that the content is not obscured.</p>
@@ -77,7 +78,7 @@
   <p>Ideally, Centurion wasn't meant to be the end of a theme, but rather it was meant to be beginning of a better one. Most of the features that exist within Centurion I have personally had to rebuild on most of the themes that I have worked on each time a new theme was created. I started working on Centurion to be the bridge between having to build mobile features into a theme, or even to have to build basic features, such as buttons, and text formats. Out of the box, Centurion is meant to speed up the development process.</p>
 
 </div>
-<div class="grid-4">
+<div class="grid-40">
 
   <h2>Features</h2>
   <ul>
@@ -103,42 +104,42 @@
 
 <div class="clear"></div>
 
-<div class="grid-6">
+<div class="grid-50">
   <h2>Code</h2>
   <p><code>
       &lt;div class="container"&gt;<br>
-      &nbsp;&nbsp;&nbsp;&lt;div class="grid-3 first"&gt;<br>
+      &nbsp;&nbsp;&nbsp;&lt;div class="grid-33 alpha"&gt;<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...<br>
       &nbsp;&nbsp;&nbsp; &lt;/div&gt;<br>
-      &nbsp;&nbsp;&nbsp;&lt;div class="grid-6"&gt;<br>
+      &nbsp;&nbsp;&nbsp;&lt;div class="grid-33"&gt;<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...<br>
       &nbsp;&nbsp;&nbsp;&lt;/div&gt;<br>
-      &nbsp;&nbsp;&nbsp;&lt;div class="grid-3 last"&gt;<br>
+      &nbsp;&nbsp;&nbsp;&lt;div class="grid-33 omega"&gt;<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...<br>
       &nbsp;&nbsp;&nbsp;&lt;/div&gt;<br>
       &lt;/div&gt;
 
       </code></p>
 </div>
-<div class="grid-6">
-  <h2>Grid 6</h2>
+<div class="grid-50">
+  <h2>Grid 50</h2>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ultricies adipiscing felis vitae consequat. Aliquam congue, metus non hendrerit tempor, erat augue tempus nisi, eget aliquet enim urna et lorem. Vestibulum laoreet neque vitae sem mollis quis cursus nisl iaculis. Quisque orci nisi, auctor ac accumsan at, aliquam id neque. Suspendisse ac odio risus, sit amet pharetra massa. Suspendisse ipsum velit, semper quis aliquet sollicitudin, pharetra sit amet tellus. Morbi in erat ac felis luctus cursus at ac nibh. Ut vel est id mi ultricies vehicula et eu diam. Mauris placerat, metus sit amet placerat iaculis, arcu eros commodo risus, non consequat diam nunc sed magna. Proin sed tellus nisl, in condimentum nibh.</p>
 </div>
 <!-- end of grid 6x6 -->
 <div class="clear"></div>
-<div class="grid-3">
+<div class="grid-25">
   <h3>Grid 3</h3>
   <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
 </div>
-<div class="grid-3">
+<div class="grid-25">
   <h3>Grid 3</h3>
   <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
 </div>
-<div class="grid-3">
+<div class="grid-25">
   <h3>Grid 3</h3>
   <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
 </div>
-<div class="grid-3">
+<div class="grid-25">
   <h3>Grid 3</h3>
   <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
 </div>
@@ -150,21 +151,20 @@
   </section>
   <!-- End of Content Section -->
 
-<!-- End of Wrapper -->
 
   <!-- Footer -->
   <footer>
     <div class="container">
-      <div class="grid-4">
+      <div class="grid-80">
         <p>Centurion Framework was created by <a href="http://www.justinhough.com" title="Justin Hough">Justin Hough</a>. Images supplied by <a href="http://placehold.it/">placehold.it</a></p>
       </div>
-      <div class="grid-4 push-4">
+      <div class="grid-20">
       	<p>Licensed under <a href="http://www.gnu.org/licenses/gpl.html" rel="license">GPL</a> and <a href="http://www.opensource.org/licenses/mit-license.php" rel="license">MIT</a>.</p>
       </div>
     </div>
   </footer>
   <!-- End of Footer -->
 
-
+  <script src="http://localhost:35729/livereload.js"></script>
 </body>
 </html>
