minor updates to html (meta descriptions)

--- a/example/fluid.html
+++ b/example/fluid.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Centurion Framework</title>
-<meta name="description" content="testing">
+<meta name="description" content="Centurion Framework">
 <meta name="author" content="">
 
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -17,7 +17,7 @@
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 <!-- Centurion Framework -->
 <link rel="stylesheet" href="../css/centurion.css" />
-<link rel="stylesheet" href="css/elusive-webfont.css" />
+<link rel="stylesheet" href="../css/elusive-webfont.css" />
 <!-- End of Framework -->
 <link rel="stylesheet" href="../css/custom.css" />
 
@@ -44,7 +44,6 @@
 		<div class="grid-100">
 				<h1>Centurion Framework</h1>
 				<nav id="main" class="mobile">
-				<span class="openMenu hide-desktop">Open</span>
 				<ul>
 					<li><a href="../index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
