--- a/example/about.html
+++ b/example/about.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Centurion Framework</title>
-<meta name="description" content="testing">
+<meta name="description" content="Centurion Framework">
 <meta name="author" content="">
 
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -43,7 +43,6 @@
 		<div class="grid-100">
 				<h1>Centurion Framework</h1>
 				<nav id="main" class="mobile">
-				<span class="openMenu hide-desktop">Open</span>
 				<ul>
 					<li><a href="../index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
