--- a/example/grid.html
+++ b/example/grid.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Centurion Framework</title>
-  <meta name="description" content="testing">
+  <meta name="description" content="Centurion Framework">
   <meta name="author" content="">
   
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -18,7 +18,7 @@
   <!-- Centurion Framework -->
   <link rel="stylesheet" href="../css/centurion.css" />
   <!-- End of Framework -->
-  <link rel="stylesheet" href="css/elusive-webfont.css" />
+  <link rel="stylesheet" href="../css/elusive-webfont.css" />
   <link rel="stylesheet" href="../css/custom.css" />
   
   <!--[if gte IE 9]>
@@ -68,7 +68,6 @@
 		<div class="grid-100">
 				<h1>Centurion Framework</h1>
 				<nav id="main" class="mobile">
-				<span class="openMenu hide-desktop">Open</span>
 				<ul>
 					<li><a href="../index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
