--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Centurion Framework</title>
-  <meta name="description" content="testing">
+  <meta name="description" content="Centurion Framework">
   <meta name="author" content="">
   
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -40,10 +40,9 @@
 <header>
 
 	<div class="container">
-		<div class="grid-12">
+		<div class="grid-100">
 				<h1>Centurion Framework</h1>
 				<nav id="main" class="mobile">
-				<span class="openMenu hide-desktop">Open</span>
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="example/about.html">About</a></li>
@@ -63,7 +62,6 @@
         <div class="grid-100">
   <div id="mainBanner">
     <h1>The Framework</h1>
-    <p>Centurion is a intuitive responsive framework that works out of the box with added features to hep build your next web project quickly.</p>
   </div>
 </div>
 
@@ -71,11 +69,10 @@
 <div class="grid-60">
 
   <img src="http://placehold.it/200x310" alt="" class="lfloat frame visible">
+  <p>Centurion is a intuitive responsive framework that works out of the box with added features to hep build your next web project quickly.</p>
   <p>Centurion is a resposive, media query driven HTML5 and CSS3 framework. It is designed to be used on any website out of the box. Unlilke some other frameworks, Centurion is designed for mobile devices and desktop. Using CSS media queries the Centurion is able to conform to the screen and shift the content as necessary so that the content is not obscured.</p>
   <p>Centurion offers the basic 960 grid with a twist. Using a 12 column container, the framework can size down from 960 to 768, 480, and 320 pixel screen sizes. Centurion does all its work in the browser, and allows for one template to auto-resize to the device without the need to detect devices through either JavaScript or PHP.</p>
 
-  <h2>Out of the Box</h2>
-  <p>Ideally, Centurion wasn't meant to be the end of a theme, but rather it was meant to be beginning of a better one. Most of the features that exist within Centurion I have personally had to rebuild on most of the themes that I have worked on each time a new theme was created. I started working on Centurion to be the bridge between having to build mobile features into a theme, or even to have to build basic features, such as buttons, and text formats. Out of the box, Centurion is meant to speed up the development process.</p>
 
 </div>
 <div class="grid-40">
@@ -91,13 +88,14 @@
       </ul>
     </li>
     <li>Buttons</li>
-    <li></li>
   </ul>
   <br />
 
-  <h2>Pre-Built Themes</h2>
+  <!--
+<h2>Pre-Built Themes</h2>
   <p><a href="">Drupal Theme</a></p>
   <p>Wordpress Theme - coming soon.</p>
+-->
 
 </div>
 <!-- end of grid 8x3 -->
@@ -122,8 +120,8 @@
       </code></p>
 </div>
 <div class="grid-50">
-  <h2>Grid 50</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ultricies adipiscing felis vitae consequat. Aliquam congue, metus non hendrerit tempor, erat augue tempus nisi, eget aliquet enim urna et lorem. Vestibulum laoreet neque vitae sem mollis quis cursus nisl iaculis. Quisque orci nisi, auctor ac accumsan at, aliquam id neque. Suspendisse ac odio risus, sit amet pharetra massa. Suspendisse ipsum velit, semper quis aliquet sollicitudin, pharetra sit amet tellus. Morbi in erat ac felis luctus cursus at ac nibh. Ut vel est id mi ultricies vehicula et eu diam. Mauris placerat, metus sit amet placerat iaculis, arcu eros commodo risus, non consequat diam nunc sed magna. Proin sed tellus nisl, in condimentum nibh.</p>
+  <h2>Out of the Box</h2>
+  <p>Ideally, Centurion wasn't meant to be the end of a theme, but rather it was meant to be beginning of a better one. Most of the features that exist within Centurion I have personally had to rebuild on most of the themes that I have worked on each time a new theme was created. I started working on Centurion to be the bridge between having to build mobile features into a theme, or even to have to build basic features, such as buttons, and text formats. Out of the box, Centurion is meant to speed up the development process.</p>
 </div>
 <!-- end of grid 6x6 -->
 <div class="clear"></div>
