--- a/test_features.html
+++ b/test_features.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Test New Features</title>
-  <meta name="description" content="testing">
+  <meta name="description" content="Centurion Framework">
   <meta name="author" content="">
   
   <meta name="viewport" content="width=device-width, initial-scale=1" />
