--- a/features.html
+++ b/features.html
@@ -3,55 +3,66 @@
 <head>
 	<title>Features | Centurion - A CSS Web Framework</title>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
-	<link rel="shortcut icon" href="graphics/favicon.jpg" />
-	<link rel="apple-touch-icon" href="graphics/apple-touch-icon.png" />
-	<link rel="apple-touch-icon" sizes="72x72" href="graphics/apple-touch-icon-72x72.png" />
-	<link rel="apple-touch-icon" sizes="114x114" href="graphics/apple-touch-icon-114x114.png" />
+<link rel="shortcut icon" href="graphics/favicon.jpg" />
+<link rel="apple-touch-icon" href="graphics/apple-touch-icon.png" />
+<link rel="apple-touch-icon" sizes="72x72" href="graphics/apple-touch-icon-72x72.png" />
+<link rel="apple-touch-icon" sizes="114x114" href="graphics/apple-touch-icon-114x114.png" />
 
-	<!-- CENTURION -->
-	<link rel="stylesheet" href="styles/reset.css" />
-	<link rel="stylesheet" href="styles/print.css" />
-	<link rel="stylesheet" href="styles/centurion.css" />
-	<link rel="stylesheet" href="styles/style.css" />
-	<!-- end of CENTURION -->
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,700,600,800,300' rel='stylesheet' type='text/css'>
+<!-- CENTURION -->
+<link rel='stylesheet' href='styles/reset.css'>
+<link rel='stylesheet' href='styles/centurion.css'>
+<link rel='stylesheet' href='styles/elusive-webfont.css'>
+<!-- end of CENTURION -->
 
-	<link rel="stylesheet" href="styles/demo.css" />
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,700,600,800,300' rel='stylesheet' type='text/css'>
 
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<!-- @scripts centurion -->
+<!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+<!--[if gte IE 9]>
+  <style type="text/css">
+    .gradient {
+       filter: none;
+    }
+  </style>
+<![endif]-->
+
+<link rel='stylesheet' href='styles/demo.css'>
 
 	<style type="text/css">
-		img { width: auto; }
+		article { margin: 0; }
 	</style>
 
 </head>
 <body>
-	<a href="https://github.com/jhough10/centurion"><img
-        src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"
-        alt="Fork me on GitHub" class="github"></a>
+	<a href="https://github.com/jhough10/centurion" class="github"><!--github fork--></a>
 
-	<header>
-		<section class="container">
-			<article class="grid-3">
-				<h1><a href="index.html">Centurion</a></h1>
-			</article>
-			<article class="grid-9">
-				<nav>
-					<ul>
-						<li><a href="features.html">Features</a></li>
-						<li><a href="grid.html">The Grid</a></li>
-						<li><a href="documentation.html">Docs</a></li>
-					</ul>
-				</nav>
+<header>
+	<section class="container">
+		<article class="grid-20">
+			<h1><a href="index.html">Centurion</a></h1>
+		</article>
+		<article class="grid-80">
+			<nav>
+				<ul>
+					<li class='current'><a class='current' href="features.html">Features</a></li>
+					<li><a href="grid.html">The Grid</a></li>
+					<li><a href="documentation.html">Docs</a></li>
+				</ul>
+			</nav>
 
-			</article>
-		</section>
-	</header>
+		</article>
+	</section>
+</header>
 
 	<section id="headline">
 		<div class="container">
-			<article class="grid-12">
+			<article class="grid-100">
 				<h1>Features</h1>
 			</article>
 		</div>
@@ -64,22 +75,22 @@
 
 		       <!-- FEATURE 1 -->
 				<section>
-					<article class="grid-5">
+					<article class="grid-33">
 						<h2>Self Contained</h2>
 						<p>Centurion is built with fewer files and packaged to be all inclusive.</p>
 					</article>
-		    	<article class="grid-3">
-						<img src="graphics/briefcase.jpg" class="hide-mobile" alt="feature" />
+		    	<article class="grid-33">
+						<p class="icon-folder-open featurePage"></p>
 					</article>
 				</section>
 				<div class="clear"></div>
 
 		    <!-- FEATURE 2 -->
 		    <section>
-		    	<article class="grid-3">
-						<img src="graphics/code.jpg" class="hide-mobile" alt="feature" />
+		    	<article class="grid-33">
+						<p class="icon-leaf featurePage"></p>
 					</article>
-					<article class="grid-5">
+					<article class="grid-33">
 						<h2>Semantic</h2>
 						<p>With HTML5 and CSS 3 in mind everything has been scaled to leverage modern media queries, gradients, and other features that give Centurion a unique look and feel with less.</p>
 					</article>
@@ -89,22 +100,22 @@
 
 				<!-- FEATURE 3 -->
 				<section>
-					<article class="grid-5">
+					<article class="grid-33">
 						<h2>Easy to Learn</h2>
 						<p>Classes and ID's make sense. Finding it hard to learn a new framework? Centurion features easy to read markup, stylying elements makes sense based on what the usage is and it even comes fully documented (coming soon) so you can find what you need fast.</p>
 					</article>
-		    	<article class="grid-3">
-						<img src="graphics/book.jpg" class="hide-mobile" alt="feature" />
+		    	<article class="grid-33">
+						<p class="icon-glasses featurePage"></p>
 					</article>
 				</section>
 				<div class="clear"></div>
 
 		    <!-- FEATURE 4 -->
 		    <section>
-		    	<article class="grid-3">
-						<img src="graphics/guage.jpg" class="hide-mobile" alt="feature" />
+		    	<article class="grid-33">
+						<p class="icon-dashboard featurePage"></p>
 					</article>
-					<article class="grid-5">
+					<article class="grid-33">
 						<h2>Optimized</h2>
 						<p>The code has been optimized for a minimal footprint on web development projects. No more bloated code that is hard to understand and slows your browser down.</p>
 					</article>
@@ -114,23 +125,23 @@
 
 				<!-- FEATURE 5 -->
 				<section>
-					<article class="grid-5">
+					<article class="grid-33">
 						<h2>Responsive</h2>
 						<p>A responsive grid layout makes scaling a web layout for smaller devices a breeze. Take a seat, build your desktop version and watch it scale for your phone instantly.</p>
 					</article>
 
-		    	<article class="grid-3">
-						<img src="graphics/rocket.jpg" class="hide-mobile" alt="feature" />
+		    	<article class="grid-33">
+						<p class="icon-fullscreen featurePage"></p>
 					</article>
 				</section>
 				<div class="clear"></div>
 
 		    <!-- FEATURE 6 -->
 		    <section>
-		    	<article class="grid-3">
-						<img src="graphics/tools.jpg" class="hide-mobile" alt="feature" />
+		    	<article class="grid-33">
+						<p class="icon-cogs featurePage"></p>
 					</article>
-					<article class="grid-5">
+					<article class="grid-33">
 						<h2>Customizable</h2>
 						<p>Custom scripts for navigation, tables, and tabbed elements were built using coffeescript and are easily modifiable for flexibiliy. Even the CSS was built using Sass making it easy to include or exclude any portions of the code you may or may not want.</p>
 					</article>
@@ -139,52 +150,61 @@
 
 				<!-- FEATURE 7 -->
 				<section>
-					<article class="grid-5">
+					<article class="grid-33">
 						<h2>Integrated</h2>
 						<p>Comes integrated with several JavaScript libraries, such as, jQuery, Coffeescript, Craydent and more. </p>
 					</article>
 
-		    	<article class="grid-3">
-						<img src="graphics/grad_cap.jpg" class="hide-mobile" alt="feature" />
+		    	<article class="grid-33">
+						<p class="icon-arrow-up featurePage"></p>
 					</article>
 				</section>
 				<div class="clear"></div>
 
-		    <!-- FEATURE 8 -->
-		    <!-- <section>
-		    	<article class="grid-3 alpha">
-						<img src="graphics/______.jpg" class="hide-mobile" alt="feature" />
-					</article>
-					<article class="grid-5 omega">
-						<h2>This is a feature</h2>
-						<p>We need an explanation of the feature that is being used and need it to make a case for why you would want to use this project inside your own project.</p>
-					</article>
-				</section> -->
-				<div class="clear"></div>
+		    
 
 				<!-- end of content -->
 			</article>
 			<aside class="grid-4">
-				<!-- <h2>Features</h2>
-				<ul>
-					<li><a href="tables.html">Tables</a></li>
-					<li><a href="buttons.html">Buttons</a></li> -->
-					<!--<li><a href="various.html">Various</a></li>
-				</ul>-->
+
 			</aside>
 		</div>
 	</section>
 
 
 	<footer>
-		<section class="container">
-			<article class="grid-4">
-				<p>Site content &copy; 2012 Room 316 Studios.</p>
-			</article>
-			<article class="grid-4 push-4">
-				<p>Licensed under <a href="http://www.gnu.org/licenses/gpl.html" rel="license">GPL</a> and <a href="http://www.opensource.org/licenses/mit-license.php" rel="license">MIT</a>.</p>
-			</article>
-		</section>
-	</footer>
+	<section class="container">
+		<article class="grid-33">
+			<p>Site content &copy; 2012 Room 316 Studios.</p>
+		</article>
+		<article class="grid-33 push-33">
+			<p>Licensed under <a href="http://www.gnu.org/licenses/gpl.html" rel="license">GPL</a> and <a href="http://www.opensource.org/licenses/mit-license.php" rel="license">MIT</a>.</p>
+		</article>
+	</section>
+</footer>
+
+
+        <!-- Hammer reload -->
+          <script>
+            setInterval(function(){
+              try {
+                if(typeof ws != 'undefined' && ws.readyState == 1){return true;}
+                ws = new WebSocket('ws://'+(location.host || 'localhost').split(':')[0]+':35353')
+                ws.onopen = function(){ws.onclose = function(){document.location.reload()}}
+                ws.onmessage = function(){
+                  var links = document.getElementsByTagName('link'); 
+                    for (var i = 0; i < links.length;i++) { 
+                    var link = links[i]; 
+                    if (link.rel === 'stylesheet' && !link.href.match(/typekit/)) { 
+                      href = link.href.replace(/((&|\?)hammer=)[^&]+/,''); 
+                      link.href = href + (href.indexOf('?')>=0?'&':'?') + 'hammer='+(new Date().valueOf());
+                    }
+                  }
+                }
+              }catch(e){}
+            }, 1000)
+          </script>
+        <!-- /Hammer reload -->
+      
 </body>
 </html>
