--- a/index.html
+++ b/index.html
@@ -3,49 +3,62 @@
 <head>
 	<title>Centurion - A CSS Web Framework</title>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
-	<link rel="shortcut icon" href="graphics/favicon.jpg" />
-	<link rel="apple-touch-icon" href="graphics/apple-touch-icon.png" />
-	<link rel="apple-touch-icon" sizes="72x72" href="graphics/apple-touch-icon-72x72.png" />
-	<link rel="apple-touch-icon" sizes="114x114" href="graphics/apple-touch-icon-114x114.png" />
+<link rel="shortcut icon" href="graphics/favicon.jpg" />
+<link rel="apple-touch-icon" href="graphics/apple-touch-icon.png" />
+<link rel="apple-touch-icon" sizes="72x72" href="graphics/apple-touch-icon-72x72.png" />
+<link rel="apple-touch-icon" sizes="114x114" href="graphics/apple-touch-icon-114x114.png" />
 
-	<!-- CENTURION -->
-	<link rel="stylesheet" href="styles/reset.css" />
-	<link rel="stylesheet" href="styles/print.css" />
-	<link rel="stylesheet" href="styles/centurion.css" />
-	<link rel="stylesheet" href="styles/style.css" />
-	<!-- end of CENTURION -->
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,700,600,800,300' rel='stylesheet' type='text/css'>
+<!-- CENTURION -->
+<link rel='stylesheet' href='styles/reset.css'>
+<link rel='stylesheet' href='styles/centurion.css'>
+<link rel='stylesheet' href='styles/elusive-webfont.css'>
+<!-- end of CENTURION -->
 
-	<link rel="stylesheet" href="styles/demo.css" />
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,700,600,800,300' rel='stylesheet' type='text/css'>
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<!-- @scripts centurion -->
+<!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+<!--[if gte IE 9]>
+  <style type="text/css">
+    .gradient {
+       filter: none;
+    }
+  </style>
+<![endif]-->
+
+<link rel='stylesheet' href='styles/demo.css'>
 
 </head>
 <body>
-	<a href="https://github.com/jhough10/centurion"><img
-        src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"
-        alt="Fork me on GitHub" class="github"></a>
+	<a href="https://github.com/jhough10/centurion" class="github"><!--github fork--></a>
 
-	<header>
-		<section class="container">
-			<article class="grid-3">
-				<h1><a href="index.html">Centurion</a></h1>
-			</article>
-			<article class="grid-9">
-				<nav>
-					<ul>
-						<li><a href="features.html">Features</a></li>
-						<li><a href="grid.html">The Grid</a></li>
-						<li><a href="documentation.html">Docs</a></li>
-					</ul>
-				</nav>
+<header>
+	<section class="container">
+		<article class="grid-20">
+			<h1><a class='current' href="index.html">Centurion</a></h1>
+		</article>
+		<article class="grid-80">
+			<nav>
+				<ul>
+					<li><a href="features.html">Features</a></li>
+					<li><a href="grid.html">The Grid</a></li>
+					<li><a href="documentation.html">Docs</a></li>
+				</ul>
+			</nav>
 
-			</article>
-		</section>
-	</header>
+		</article>
+	</section>
+</header>
+	
 	<section id="tour">
 		<div class="container">
-			<article class="grid-6">
+			<article class="grid-50">
 				<div class="slider">
 
 					<h1>Centurion</h1>
@@ -58,57 +71,80 @@
 
 				</div>
 			</article>
-			<article class="grid-6">
+			<article class="grid-50">
 				<img src="graphics/centurion_tour_devices.png" alt="picture of mobile devices" />
 			</article>
 		</div>
 	</section>
 	<section id="primary">
 		<div class="container">
-			<article class="grid-4">
-				<h2 id="css3">CSS3/HTML 5</h2>
+			<article class="grid-33">
+			  <div class="icon-css feature"></div>
+				<h2>CSS3/HTML 5</h2>
 				<p>Built-on CSS3 and HTML5 semantics to allow you to start captializing on a next generation standard.</p>
 			</article>
 
-			<article class="grid-4">
-				<h2 id="responsive">Responsive</h2>
+			<article class="grid-33">
+				<div class="icon-resize-small feature"></div>
+				<h2>Responsive</h2>
 				<p>No matter the device: Mac, PC, iPhone, iPad, iPad mini, or Android tablet, Centurion does the work of making your web project responsive and viewable on multiple devices</p>
 			</article>
 
-			<article class="grid-4">
-				<h2 id="prototype">Prototype Quick</h2>
+			<article class="grid-33">
+				<div class="icon-website feature"></div>
+				<h2>Prototype Quick</h2>
 				<p>Need to built a web wireframe quick, look no further than Centurion. Scalable and easy to learn syntax makes building a prototype simple.</p>
 			</article>
 
 			<p>&nbsp;</p>
-			<p>&nbsp;</p>
 			<div class="clear"></div>
 
-			<article class="grid-12">
+			<article class="grid-100">
 				<h2>Use Centurion for your next web project</h2>
 				<p>If you need more convincing about the power of Centurion for your next web project, visit our <a href="features.html">features</a> page to find out all you need to know about the different elements that come built in. If you are unfamiliar with the gambit of options, check out our <a href="documentation.html">documentation</a> on Centurion for syntax and class structures.</p>
 
 				<p>We're always interested to see how the community will use Centurion. Drop us a line and let us know how and where you used Centurion so that we can showcase the many ways Centurion is making the web better.</p>
+				<p>&nbsp;</p>
 			</article>
 
 		</div>
 	</section>
 
-<!-- 	 <section id="secondary">
-		<div class="container">
-
-		</div>
-	</section>  -->
 
 	<footer>
-		<section class="container">
-			<article class="grid-4">
-				<p>Site content &copy; 2012 Room 316 Studios.</p>
-			</article>
-			<article class="grid-4 push-4">
-				<p>Licensed under <a href="http://www.gnu.org/licenses/gpl.html" rel="license">GPL</a> and <a href="http://www.opensource.org/licenses/mit-license.php" rel="license">MIT</a>.</p>
-			</article>
-		</section>
-	</footer>
+	<section class="container">
+		<article class="grid-33">
+			<p>Site content &copy; 2012 Room 316 Studios.</p>
+		</article>
+		<article class="grid-33 push-33">
+			<p>Licensed under <a href="http://www.gnu.org/licenses/gpl.html" rel="license">GPL</a> and <a href="http://www.opensource.org/licenses/mit-license.php" rel="license">MIT</a>.</p>
+		</article>
+	</section>
+</footer>
+
+
+        <!-- Hammer reload -->
+          <script>
+            setInterval(function(){
+              try {
+                if(typeof ws != 'undefined' && ws.readyState == 1){return true;}
+                ws = new WebSocket('ws://'+(location.host || 'localhost').split(':')[0]+':35353')
+                ws.onopen = function(){ws.onclose = function(){document.location.reload()}}
+                ws.onmessage = function(){
+                  var links = document.getElementsByTagName('link'); 
+                    for (var i = 0; i < links.length;i++) { 
+                    var link = links[i]; 
+                    if (link.rel === 'stylesheet' && !link.href.match(/typekit/)) { 
+                      href = link.href.replace(/((&|\?)hammer=)[^&]+/,''); 
+                      link.href = href + (href.indexOf('?')>=0?'&':'?') + 'hammer='+(new Date().valueOf());
+                    }
+                  }
+                }
+              }catch(e){}
+            }, 1000)
+          </script>
+        <!-- /Hammer reload -->
+      
+	
 </body>
 </html>
