fixed minor issues with merge

--- a/index.html
+++ b/index.html
@@ -1,40 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<<<<<<< HEAD
-<meta charset="utf-8">
-<title>Centurion Framework</title>
-<meta name="description" content="testing">
-<meta name="author" content="">
-
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-
-<link rel="shortcut icon" href="images/favicon.jpg" />
-<link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
-<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
-<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
-
-<link rel="stylesheet" href="css/reset.css" />
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-
-<!-- Centurion Framework -->
-<link rel="stylesheet" href="css/centurion.css" />
-<!-- End of Framework -->
-<link rel="stylesheet" href="css/custom.css" />
-
-<!--[if gte IE 9]>
-  <style type="text/css">
-    .gradient {
-       filter: none;
-    }
-  </style>
-<![endif]--><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script type="text/javascript" src="js/jquery.url.js"></script>
-<script type="text/javascript" src="js/centurion.js"></script>
-<!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
-=======
   <meta charset="utf-8">
   <title>Centurion Framework</title>
   <meta name="description" content="Centurion Framework">
@@ -68,31 +34,11 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
->>>>>>> v3.1
 </head>
 <body>
 <!-- Navigation -->
 <header>
 
-<<<<<<< HEAD
-    <div class="container">
-      <div class="grid-12">
-          <h1>Centurion Framework</h1>
-          <nav id="main" class="mobile">
-  <span class="openMenu hide-desktop">Open</span>
-  <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="about/index.html">About</a></li>
-    <li><a href="grid/index.html">Grid</a></li>
-    <li><a href="various/index.html">Features</a></li>
-    <!-- <li><a href="fluid/index.html">Try Me Fluid!</a></li> -->
-  </ul>
-</nav>
-
-
-      </div>
-    </div>
-=======
 	<div class="container">
 		<div class="grid-100">
 				<h1>Centurion Framework</h1>
@@ -106,7 +52,6 @@
 			</nav>
 		</div>
 	</div>
->>>>>>> v3.1
 
 </header>
 <!-- End of Navigation -->
@@ -177,6 +122,51 @@
 <div class="grid-50">
   <h2>Out of the Box</h2>
   <p>Ideally, Centurion wasn't meant to be the end of a theme, but rather it was meant to be beginning of a better one. Most of the features that exist within Centurion I have personally had to rebuild on most of the themes that I have worked on each time a new theme was created. I started working on Centurion to be the bridge between having to build mobile features into a theme, or even to have to build basic features, such as buttons, and text formats. Out of the box, Centurion is meant to speed up the development process.</p>
+</div>
+<!-- end of grid 6x6 -->
+<div class="clear"></div>
+<div class="grid-25">
+  <h3>Grid 3</h3>
+  <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+</div>
+<div class="grid-25">
+  <h3>Grid 3</h3>
+  <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+</div>
+<div class="grid-25">
+  <h3>Grid 3</h3>
+  <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+</div>
+<div class="grid-25">
+  <h3>Grid 3</h3>
+  <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+</div>
+<!-- end of grid 3x3x3x3 -->
+<div class="clear"></div>
+    </div>
+    <!-- container -->
+    <div class="clear"></div>
+  </section>
+  <!-- End of Content Section -->
+
+
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+      <div class="grid-80">
+        <p>Centurion Framework was created by <a href="http://www.justinhough.com" title="Justin Hough">Justin Hough</a>. Images supplied by <a href="http://placehold.it/">placehold.it</a></p>
+      </div>
+      <div class="grid-20">
+      	<p>Licensed under <a href="http://www.gnu.org/licenses/gpl.html" rel="license">GPL</a> and <a href="http://www.opensource.org/licenses/mit-license.php" rel="license">MIT</a>.</p>
+      </div>
+    </div>
+  </footer>
+  <!-- End of Footer -->
+
+  <script src="http://localhost:35729/livereload.js"></script>
+</body>
+</html>
+urion is meant to speed up the development process.</p>
 </div>
 <!-- end of grid 6x6 -->
 <div class="clear"></div>
