--- a/buttons.html
+++ b/buttons.html
@@ -129,11 +129,10 @@
 				<!-- end of content -->
 			</article>
 			<aside class="grid-33">
-				<h2>Features</h2>
+				<h2>Areas of Interest</h2>
 				<ul>
 					<li><a href="tables.html">Tables</a></li>
 					<li class='current'><a class='current' href="buttons.html">Buttons</a></li>
-					<!--<li><a href="various.html">Various</a></li> -->
 				</ul>
 			</aside>
 		</div>
@@ -152,7 +151,27 @@
 </footer>
 
 
-        
+        <!-- Hammer reload -->
+          <script>
+            setInterval(function(){
+              try {
+                if(typeof ws != 'undefined' && ws.readyState == 1){return true;}
+                ws = new WebSocket('ws://'+(location.host || 'localhost').split(':')[0]+':35353')
+                ws.onopen = function(){ws.onclose = function(){document.location.reload()}}
+                ws.onmessage = function(){
+                  var links = document.getElementsByTagName('link'); 
+                    for (var i = 0; i < links.length;i++) { 
+                    var link = links[i]; 
+                    if (link.rel === 'stylesheet' && !link.href.match(/typekit/)) { 
+                      href = link.href.replace(/((&|\?)hammer=)[^&]+/,''); 
+                      link.href = href + (href.indexOf('?')>=0?'&':'?') + 'hammer='+(new Date().valueOf());
+                    }
+                  }
+                }
+              }catch(e){}
+            }, 1000)
+          </script>
+        <!-- /Hammer reload -->
       
 </body>
 </html>
