--- a/tables.html
+++ b/tables.html
@@ -299,11 +299,10 @@
 			</article>
 			<aside class="grid-33">
 
-		        <h2>Features</h2>
+		        <h2>Areas of Interest</h2>
 				<ul>
 					<li class='current'><a class='current' href="tables.html">Tables</a></li>
 					<li><a href="buttons.html">Buttons</a></li>
-					<!--<li><a href="various.html">Various</a></li> -->
 				</ul>
 
 		        <br>
@@ -346,7 +345,27 @@
 </footer>
 
 
-        
+        <!-- Hammer reload -->
+          <script>
+            setInterval(function(){
+              try {
+                if(typeof ws != 'undefined' && ws.readyState == 1){return true;}
+                ws = new WebSocket('ws://'+(location.host || 'localhost').split(':')[0]+':35353')
+                ws.onopen = function(){ws.onclose = function(){document.location.reload()}}
+                ws.onmessage = function(){
+                  var links = document.getElementsByTagName('link'); 
+                    for (var i = 0; i < links.length;i++) { 
+                    var link = links[i]; 
+                    if (link.rel === 'stylesheet' && !link.href.match(/typekit/)) { 
+                      href = link.href.replace(/((&|\?)hammer=)[^&]+/,''); 
+                      link.href = href + (href.indexOf('?')>=0?'&':'?') + 'hammer='+(new Date().valueOf());
+                    }
+                  }
+                }
+              }catch(e){}
+            }, 1000)
+          </script>
+        <!-- /Hammer reload -->
       
 </body>
 </html>
