--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     }
   </style>
 <![endif]-->
+<!--[if lte IE 7]><script src="scripts/lte-ie7.js"></script><![endif]-->
 
 <link rel='stylesheet' href='styles/demo.css'>
 
@@ -40,18 +41,15 @@
 
 <header>
 	<section class="container">
-		<article class="grid-20">
-			<h1><a class='current' href="index.html">Centurion</a></h1>
-		</article>
-		<article class="grid-80">
+		<article class="grid-100">
 			<nav>
 				<ul>
+					<li><a href="index.html" id="logo">Centurion</a></li>
 					<li><a href="features.html">Features</a></li>
 					<li><a href="grid.html">The Grid</a></li>
 					<li><a href="documentation.html">Docs</a></li>
 				</ul>
 			</nav>
-
 		</article>
 	</section>
 </header>
