Added IE6-7 font support to HTML pages

--- a/example/grid.html
+++ b/example/grid.html
@@ -33,11 +33,7 @@
   <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  
-  <style type="text/css">
-  		
-  
-  </style>
+  <!--[if lte IE 7]><script src="scripts/lte-ie7.js"></script><![endif]-->
   
   <script type="text/javascript">
     $(document).ready(function(){
