--- a/example/about.html
+++ b/example/about.html
@@ -33,6 +33,7 @@
 <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
+<!--[if lte IE 7]><script src="scripts/lte-ie7.js"></script><![endif]-->
 
 </head>
 <body>
